@@ -1,3 +1,7 @@
+2013-01-07 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Corrected error in fetching related controller in BE mapping interface, resolves #44364
+
 2012-12-20 Roberto Presedo (Cobweb)  <typo3@cobweb.ch>
 
 	* Corrected code to stop execution after redirection, resolves #44158
